tests/030-syntax-error/err.expected
error: expecting "]" on line 1:
[fu
   ^
